--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+
+.favorite-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  background-color: #282c34;
+}
+
+.favorite-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border: 1px solid black;
+  margin-bottom: 10px;
+  background-color: black;
+  color: white;
+}
+
+.favorite-item button {
+  border: none;
+  background: none;
+}
+
+body {
+  background-color: red;
+}
